[gd_scene load_steps=3 format=3 uid="uid://bgv28vulacp7o"]

[ext_resource type="Script" path="res://Scenes/Components/EnemySpawner/enemy_spawner.gd" id="1_hb6yb"]

[sub_resource type="LabelSettings" id="LabelSettings_kulpo"]
font_size = 42

[node name="EnemySpawner" type="Marker2D"]
script = ExtResource("1_hb6yb")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Label" type="Label" parent="."]
offset_left = -102.0
offset_top = -121.0
offset_right = 197.0
offset_bottom = -66.0
text = "Enemies: 100"
label_settings = SubResource("LabelSettings_kulpo")

[node name="Label2" type="Label" parent="."]
offset_left = -133.0
offset_top = -60.0
offset_right = 131.0
offset_bottom = -5.0
text = "Enemies Killed: 0"
label_settings = SubResource("LabelSettings_kulpo")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
